<resources>
    <string name="app_name">Munzul</string>
    <string name="recover_your_account">Recover Your Account</string>
    <string name="to_recover_your_account">To Recover Your Account</string>
    <string name="enter_your_registered_email_address">Enter Your Registered Email Address</string>
    <string name="resend_again">Resend Again</string>
    <string name="submit">Submit</string>
    <string name="we_sent_on_your_email_id">We Sent On Your Email ID.</string>
    <string name="please_enter_the_one_time_password">Please Enter The One Time Password</string>
    <string name="welcome_to_munzul">Welcome to MUNZUL</string>
    <string name="your_home_your_way">Your Home, Your Way</string>
    <string name="explore_buy_rent">Explore, Buy, Rent</string>
    <string name="list_your_property_carefully">List Your Property Carefully</string>
    <string name="your_journey_begins">Your Journey Begins</string>
    <string name="skip">Skip</string>
    <string name="sign_in_your_account_to_quickly_get_started">Sign In your account to quickly get started</string>
    <string name="let_s_get_started">Let’s Get Started!</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_your_account_to_quickly_get_started">Sign Up your account to quickly get started</string>
    <string name="please_set_new_password_for_security">Please set new password for security</string>
    <string name="purpose">purpose.</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="next">Next</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="payment_methods">Payment methods</string>
    <string name="payment_methods_caps">Payment Methods</string>
    <string name="about_us">About Us</string>
    <string name="saved">Saved</string>
    <string name="history">History</string>
    <string name="my_biddings">My Biddings</string>
    <string name="my_properties">My Properties</string>
    <string name="transaction_history">transaction history</string>
    <string name="additional_info">Additional Info</string>
    <string name="settings">Settings</string>
    <string name="background_check">Background Check</string>
    <string name="search_here">Search here...</string>
    <string name="my_profile">My Profile</string>
    <string name="guarantors">Guarantors</string>
    <string name="pets">Pets</string>
    <string name="co_applicants">Co-applicants</string>
    <string name="basic_information">Basic Information</string>
    <string name="residence_history">Residence History</string>
    <string name="employment_history">Employment history</string>
    <string name="income">income</string>
    <string name="references">References</string>
    <string name="vehicles">Vehicles</string>
    <string name="available_from">Available from:</string>
    <string name="description">Description</string>
    <string name="additional_features">Additional Features</string>
    <string name="walk_score">Walk score</string>
    <string name="transit_score">Transit score</string>
    <string name="bike_score">Bike score</string>
    <string name="school_rating">School Rating</string>
    <string name="listed_by_seller">Listed By Seller</string>
    <string name="type_here">Type Here...</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="view_bids">View Bids</string>
    <string name="view_additional_info">View Additional Info</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="location_settings">Location Settings</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="about_munzul">About Munzul</string>
    <string name="set_password">Set Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_sit_amet_lorem_nec_ante_fermentum_accumsan_eget_varius_elit_pellentesque_habitant_morbi_tristique_senectus_et_netus_et_malesuada_fames_ac_turpis_egestas_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_integer_laoreet_quam_in_ante_condimentum_vitae_tristique_risus_blandit_in_sed_efficitur_tortor_nullam_quis_justo_tellus_etiam_congue_convallis_enim_ut_ornare_in_hac_habitasse_platea_dictumst_fusce_a_vulputate_purus_at_tempus_tellus_vestibulum_sit_amet_neque_dui_ut_hendrerit_sapien_vitae_finibus_tincidunt_ligula_odio_hendrerit_enim_a_malesuada_eros_mi_non_ante_vivamus_vehicula_lectus_non_mauris_imperdiet_malesuada_duis_nec_feugiat_sem_morbi_mattis_ligula_vel_elementum_facilisis_cras_interdum_enim_et_ante_accumsan_rutrum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet lorem nec ante fermentum accumsan eget varius elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet quam in ante condimentum, vitae tristique risus blandit. In sed efficitur tortor. Nullam quis justo tellus. Etiam congue convallis enim ut ornare. In hac habitasse platea dictumst. Fusce a vulputate purus, at tempus tellus. Vestibulum sit amet neque dui. Ut hendrerit, sapien vitae finibus tincidunt, ligula odio hendrerit enim, a malesuada eros mi non ante. Vivamus vehicula lectus non mauris imperdiet malesuada. Duis nec feugiat sem. Morbi mattis ligula vel elementum facilisis. Cras interdum enim et ante accumsan rutrum.</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_address">Current Address</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="co_applicant_is_minor">Co-applicant is minor</string>
    <string name="co_applicant_is_minor_caps">Co-Applicant Is Minor</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="license_plates">license plates</string>
    <string name="vehicle_name">vehicle name</string>
    <string name="weight">Weight</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="comments">Comments</string>
    <string name="supporting_documents">Supporting Documents</string>
    <string name="employment">Employment</string>
    <string name="current_employer">Current Employer</string>
    <string name="address">Address</string>
    <string name="position">Position</string>
    <string name="i_worked_here_for">I worked here for</string>
    <string name="supervisor">Supervisor</string>
    <string name="type">Type</string>
    <string name="i_lived_here_for">I lived here for...</string>
    <string name="landlord">Landlord</string>
    <string name="rent">Rent</string>
    <string name="add_co_applicants">Add Co-Applicants</string>
    <string name="add_basic_information">Add Basic Information</string>
    <string name="add_guarantors">Add Guarantors</string>
    <string name="add_pets">Add Pets</string>
    <string name="save">Save</string>
    <string name="preferred_move_in_date">Preferred Move-In Date</string>
    <string name="enter_description">Enter description</string>
    <string name="it_will_take_approximately_4_Minutes">It Will Take Approximately 4 Minutes</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="for_auction">For Auction</string>
    <string name="for_rental_auction">For Rental Auction</string>
    <string name="ruma">RUMA</string>
    <string name="please_place_your_bid">Please Place Your Bid</string>
    <string name="after_winning_the_bid_you_have_to_pay_30_of_the_amount_within_5_days">After Winning The Bid You Have To Pay 30% Of The Amount Within 5 Days</string>
    <string name="bid_starting_amount_2_000">Bid Starting Amount: $2, 000</string>
    <string name="add_card">Add Card</string>
    <string name="bidding_amount">Bidding Amount</string>
    <string name="platform_fee_5">Platform Fee (5%)</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="or_pay_via_wallet">Or pay via Wallet</string>
    <string name="pay_now">pay now</string>
    <string name="pay_now_caps">Pay Now</string>
    <string name="company_name">Company name</string>
    <string name="company_website">Company Website</string>
    <string name="company_contact">Company Contact</string>
    <string name="full_address">Full Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="update">Update</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="wallet_balance_caps">Wallet Balance</string>
    <string name="you_don_t_have_enough_balance">*You don’t have enough balance</string>
    <string name="click_to_add_money">Click To Add Money</string>
    <string name="payable_amount_5_000">Payable Amount: $5, 000</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="set_new_password">Set New Password</string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="save_this_card_for_future_use">Save This Card For Future Use</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="wallet">Wallet</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="last_transactions_date_aug_12_2022">Last Transactions Date: Aug-12-2022</string>
    <string name="transactions">Transactions</string>
    <string name="bid_amount_received">Bid amount received</string>
</resources>