<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/_15sdp"
    android:background="@color/white">
    <include
        android:id="@+id/topLayout"
        layout="@layout/top_screen_tool" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:layout_marginTop="@dimen/_22sdp"
        style="@style/unselected_edittext"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCompanyWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_website"
        android:layout_marginTop="@dimen/_12sdp"
        android:maxLines="1"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyName"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCompanyContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_contact"
        android:layout_marginTop="@dimen/_18sdp"
        style="@style/unselected_edittext"
        android:gravity="start"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyWebsite"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_address"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyContact"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCity"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:inputType="text"
        android:padding="@dimen/_12sdp"
        android:paddingEnd="@dimen/_11sdp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toStartOf="@+id/etZipCode"
        app:layout_constraintStart_toStartOf="@+id/etAddress"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etZipCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:padding="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_11ssp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@+id/etCity"
        android:paddingStart="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        android:textColorHint="@color/_80000000"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style_green"
        android:text="@string/update"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/green_button_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>