<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/_9sdp"
    android:paddingHorizontal="@dimen/_18sdp"
    android:paddingBottom="@dimen/_18sdp"
    android:background="@drawable/corner_light_white_15dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_basic_information"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName|textCapWords"
        android:layout_marginTop="@dimen/_18sdp"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:digits="0123456789+"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPreferredMoveDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preferred_move_in_date"
        android:inputType="textEmailAddress"
        android:editable="false"
        android:focusable="false"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="@color/_80000000"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style_green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/etPreferredMoveDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/green_button_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>