<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/_15sdp">

    <include
        android:id="@+id/topLayout"
        layout="@layout/top_screen_tool"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName|textCapWords"
        android:layout_marginTop="@dimen/_21sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:inputType="textPersonName|textCapWords"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSocialSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Social Security Number (SSN)"
        android:inputType="number"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etDob"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCurrentAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_address"
        android:inputType="text"
        android:editable="false"
        android:focusable="false"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etSocialSecurity"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:editable="false"
        android:focusable="false"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etCurrentAddress"
        android:textColorHint="@color/_80000000"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:digits="0123456789+"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
        android:textColorHint="@color/_80000000"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style_green"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/green_button_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>