<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include
        android:id="@+id/topLayout"
        layout="@layout/top_screen_tool" />
    <TextView
        android:id="@+id/tvSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/top_subheading_text"
        android:gravity="center"
        android:layout_marginTop="@dimen/_47sdp"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:text="@string/please_set_new_password_for_security"/>

    <TextView
        android:id="@+id/tvpurpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/top_subheading_text"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubHeading"
        android:text="@string/purpose"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_48sdp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tvpurpose">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tvNewpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/_10sdp"
            style="@style/unselected_edittext"
            android:background="@drawable/edit_text_selector"
            android:textColorHint="@color/_80000000"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/_10sdp"
            style="@style/unselected_edittext"
            android:background="@drawable/edit_text_selector"
            android:textColorHint="@color/_80000000"/>

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style_green"
        android:text="@string/set_password"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/green_button_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>