<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/_9sdp"
    android:paddingHorizontal="@dimen/_18sdp"
    android:paddingBottom="@dimen/_18sdp"
    android:background="@drawable/corner_light_white_15dp">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/please_place_your_bid"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_9ssp"
        android:textColor="@color/_CC000000"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/after_winning_the_bid_you_have_to_pay_30_of_the_amount_within_5_days"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etBidPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/dollar"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_18sdp"
        android:drawablePadding="@dimen/_10sdp"
        style="@style/unselected_edittext"
        android:background="@drawable/edit_text_selector"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
        android:textColorHint="@color/_80000000"/>

    <TextView
        android:id="@+id/tvMinAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_starting_amount_2_000"
        android:gravity="center"
        android:layout_marginTop="@dimen/_9sdp"
        android:textColor="@color/_CC000000"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintTop_toBottomOf="@+id/etBidPrice"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style_green"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/_28sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvMinAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/green_button_bg"/>

    <TextView
        android:id="@+id/tvAddCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/add_card"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSubmit"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_9ssp"
        android:fontFamily="@font/roboto_medium"/>

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="1dp"
        android:background="@color/app_color"
        android:layout_marginBottom="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>